# AI

ml++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ml++  test
ml++/src/: activation.cpp  activation.h  layer.h  nn.h  nnTester.cpp  node.h  node_edge.cpp  node_edge.h
tensorflow/: deep_learning.py
tensorflow/logs/fit/20220805-182302/train/: events.out.tfevents.1659716582.AMME-PC.16204.0.v2
tensorflow/logs/fit/20220805-182421/train/: events.out.tfevents.1659716661.AMME-PC.16204.1.v2
tensorflow/logs/fit/20220805-182528/train/: events.out.tfevents.1659716728.AMME-PC.16204.2.v2
tensorflow/logs/fit/20220805-182542/train/: events.out.tfevents.1659716742.AMME-PC.16204.3.v2
tensorflow/logs/fit/20220805-182555/train/: events.out.tfevents.1659716755.AMME-PC.16204.4.v2
